--- a/public/index.html
+++ b/public/index.html
@@ -708,8 +708,7 @@
 
       // 開始測驗按鈕點擊事件
       function startQuiz() {
-        document.querySelector(".intro-pages").style.display = "none";
-        document.getElementById("auth-container").style.display = "block";
+        window.location.href = "/quiz"; // 改為這行
       }
     </script>
   </body>
